cabal-version: 2.4
name:          data-list-unweave
synopsis:      Unweaving lists
version:       0.1.0.1
package-url:   https://github.com/pnotequalnp/data-list-unweave
license:       ISC
license-file:  LICENSE
author:        Kevin Mullins
maintainer:    kevin@pnotequalnp.com
copyright:     Kevin Mullins 2022

library
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:  Data.List.Unweave
  ghc-options:      -Wall
  build-depends:    base >=4

test-suite data-list-unweave-test
  hs-source-dirs:   test
  main-is:          Main.hs
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    , base               >=4
    , data-list-unweave
    , tasty              ^>=1.4.2
    , tasty-hunit        ^>=0.10.0

benchmark data-list-unweave-bench
  hs-source-dirs:   bench
  main-is:          Main.hs
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    , base               >=4
    , criterion          ^>=1.5.13
    , data-list-unweave

executable unweave
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall
  other-modules:    Paths_data_list_unweave
  build-depends:
    , base                  >=4
    , data-list-unweave
    , optparse-applicative  ^>=0.16.1
    , text                  ^>=1.2.4
